--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1292,16 +1292,20 @@ input.i-modified,
 .i-filterselect {
 	height: 23px;
 	white-space: nowrap;
-	text-align: left /* Force default alignment */
-}
-
-.i-filterselect-input {
+	text-align: left; /* Force default alignment */
 	background: transparent url(select/img/bg-left-filter.png) no-repeat;
+	padding-left: 4px;
+}
+.i-filterselect .i-icon {
+	float: left;
+}
+.i-app .i-filterselect .i-filterselect-input {
+	background: transparent url(select/img/bg-center-filter.png) no-repeat 1px 0;
 	float: left;
 	border: none;
 	height: 20px;
 	margin: 0px;
-	padding: 3px 0 0 4px;
+	padding: 3px 0 0 2px;
 	font-size: 13px;
 }
 .i-filterselect-input:focus {
@@ -1351,14 +1355,19 @@ input.i-modified,
 	line-height: 18px;
 	margin-top: -1px;
 }
-.i-filterselect-suggestmenu {
-	margin-left: -2px;
+.i-filterselect-suggestmenu table {
+	border-collapse: collapse;
+	border: none;
 }
 .i-filterselect-suggestmenu .gwt-MenuItem {
-	padding: 1px 5px;
+	padding: 1px 6px;
 	cursor: pointer;
 	height: 18px;
 	white-space: nowrap;
+}
+
+.i-filterselect-suggestmenu .gwt-MenuItem .i-icon {
+	margin-right: 3px;
 }
 
 .i-filterselect-suggestmenu .gwt-MenuItem-selected {
@@ -1427,15 +1436,22 @@ input.i-modified,
 	border-top: 1px solid #b6bbbc;
 }
 
+
+/* Error styles (disabled by default)
+   ----------------------------------
+   
 .i-filterselect-error {
-	background: transparent url(select/img/bg-left-filter-error.png) no-repeat;
+	background-image: url(select/img/bg-left-filter-error.png);
+}
+
+.i-filterselect-error .i-filterselect-input {
+	background-image: url(select/img/bg-center-filter-error.png);
 }
 
 .i-filterselect-error .i-filterselect-button {
-	background: transparent url(select/img/bg-right-filter-error.png);
+	background-image: url(select/img/bg-right-filter-error.png);
 }
 
-/* Disabled by default
 .i-select-error .i-select-option,
 .i-select-error .i-select-select,
 .i-select-error .i-select-twincol-selections,
@@ -1445,7 +1461,9 @@ input.i-modified,
 }
 */
 
-/* Disabled by default
+/*  Required field styles (disabled by default)
+   --------------------------------------------
+   
 .i-select-required .i-select-option,
 .i-select-required .i-select-select,
 .i-select-required .i-select-twincol-selections,
@@ -1454,13 +1472,6 @@ input.i-modified,
 	background-color: #FFE0E0;
 }
 */
-
-/* IE specific styles */
-
-* html .i-filterselect {
-
-}
-
 
 /* ./WebContent/ITMILL/themes/default/shadow/shadow.css */
 .i-shadow {
