--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1300,7 +1300,8 @@ input.i-modified,
 	float: left;
 }
 .i-app .i-filterselect .i-filterselect-input,
-.i-window .i-filterselect .i-filterselect-input {
+.i-window .i-filterselect .i-filterselect-input,
+.i-popupview-popup .i-filterselect .i-filterselect-input {
 	background: transparent url(select/img/bg-center-filter.png) no-repeat 1px 0;
 	float: left;
 	border: none;
