Minor fixes to ComboBox styles.
svn changeset:6668 branch:trunk

--- a/WebContent/ITMILL/themes/default/select/select.css
+++ b/WebContent/ITMILL/themes/default/select/select.css
@@ -149,6 +149,7 @@
 
 .i-filterselect-suggestmenu .gwt-MenuItem .i-icon {
 	margin-right: 3px;
+	vertical-align: middle;
 }
 
 .i-filterselect-suggestmenu .gwt-MenuItem-selected {
