--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1390,6 +1390,7 @@ input.i-modified,
 
 .i-filterselect-suggestmenu .gwt-MenuItem .i-icon {
 	margin-right: 3px;
+	vertical-align: middle;
 }
 
 .i-filterselect-suggestmenu .gwt-MenuItem-selected {
