Fixes #2522: Fix icon alignment in all components
Also one fix for IPopupView: NPE in ApplicationConnection after ComponentDetail etc. refactoring.

svn changeset:6683 branch:trunk

--- a/WebContent/ITMILL/themes/default/caption/caption.css
+++ b/WebContent/ITMILL/themes/default/caption/caption.css
@@ -34,6 +34,7 @@
 .i-caption .i-captiontext {
 	float: left;
 	overflow: hidden;
+	vertical-align: middle;
 }
 
 .i-caption .i-required-field-indicator {
