Fixes #2468: Table cell content is 'lower' with some content.
svn changeset:6721 branch:trunk

--- a/WebContent/ITMILL/themes/default/link/link.css
+++ b/WebContent/ITMILL/themes/default/link/link.css
@@ -3,8 +3,6 @@
  * (useless to move into a separate file)
  */
 .i-link a {
-	font-size: 13px;
-	line-height: 18px;
 	color: #464f52;
 	vertical-align: middle;
 	text-decoration: none;
@@ -16,7 +14,7 @@
 }
 
 .i-disabled a {
-	cursor: pointer;
+	cursor: default;
 }
 
 .i-link img {
