--- a/WebContent/ITMILL/themes/default/window/window.css
+++ b/WebContent/ITMILL/themes/default/window/window.css
@@ -59,6 +59,8 @@
 	height: 8px;
 	margin-left: 9px;
 	background: transparent url(img/bottom-right.png) no-repeat right top;
+	/* IE7 bug fix */
+	position:relative;
 }
 
 .i-window-resizebox {
