Small fix for disabled style cursor. Now disabled components shouldn't have a "hand" cursor so eagerly.
svn changeset:6780 branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -85,12 +85,17 @@
 	margin: 0;
 }
 
-.i-disabled {
+.i-disabled,
+.i-app .i-disabled,
+.i-window .i-disabled {
 	opacity: 0.3;
 	filter: Alpha(opacity = 30);
+	cursor: default;
 }
 
-.i-disabled * {
+.i-disabled *,
+.i-app .i-disabled *,
+.i-window .i-disabled * {
 	cursor: default;
 }
 
