--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -21,11 +21,11 @@
 	font-size: 15px;
 	color: #656d73;
 	border-top: 1px solid #c8cccd;
-	cursor: pointer;
 }
 
 .i-accordion-item-caption .i-caption {
 	padding: 7px 0 6px 18px;
+	cursor: pointer;
 }
 
 .i-accordion-item-open .i-accordion-item-caption {
@@ -265,12 +265,17 @@
 	margin: 0;
 }
 
-.i-disabled {
+.i-disabled,
+.i-app .i-disabled,
+.i-window .i-disabled {
 	opacity: 0.3;
 	filter: Alpha(opacity = 30);
+	cursor: default;
 }
 
-.i-disabled * {
+.i-disabled *,
+.i-app .i-disabled *,
+.i-window .i-disabled * {
 	cursor: default;
 }
 
