Sampler icon margin for IE, fixes #2574
svn changeset:6817 branch:trunk

--- a/WebContent/ITMILL/themes/sampler/sampler/styles.css
+++ b/WebContent/ITMILL/themes/sampler/sampler/styles.css
@@ -201,6 +201,10 @@
 	margin-top: -2px;
 	margin-left: -3px;
 }
+.i-ie .i-app-SamplerApplication .i-button-screenshot img {
+	margin-left: -12px;
+}
+
 
 .i-app-SamplerApplication .i-table-featuretable tr.i-table-row,
 .i-app-SamplerApplication .i-table-featuretable tr.i-table-row-odd {
