Sampler Layouts -section changes. Not complete yet.
svn changeset:6837 branch:trunk

--- a/WebContent/ITMILL/themes/sampler/styles.css
+++ b/WebContent/ITMILL/themes/sampler/styles.css
@@ -6,6 +6,10 @@
 
 @import url(prominentprimaryaction/styles.css);
 
-@import url(layouts/styles.css);
+@import url(layouts/marginexample.css);
+
+@import url(layouts/spacingexample.css);
+
+@import url(layouts/gridexample.css);
 
 @import url(table/styles.css);
